[gd_scene load_steps=3 format=3 uid="uid://co3rktibqri4v"]

[ext_resource type="Script" path="res://scripts/car_select_menu.gd" id="1_kpg7m"]
[ext_resource type="Theme" uid="uid://bbkladv6d2xeb" path="res://ui_theme.tres" id="2_vjl5c"]

[node name="CarSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kpg7m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_vjl5c")
text = "<"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CarName" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjl5c")
text = "Level Image:"

[node name="CarImage" type="TextureRect" parent="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SelectButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_vjl5c")
text = "Play"

[node name="BackButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjl5c")
text = "Back"

[node name="RightButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("2_vjl5c")
text = ">"

[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
